--- a/dashboard.html
+++ b/dashboard.html
@@ -32,31 +32,32 @@
          <div class="navbar-right">
             <ul class="menu hidden-below-tablet">
                <li class="menu-item subtext tablet-mr-0 desktop-mr-2 workouts">
-                  <a href="workouts.html">
-                     <i class="fas fa-running fa-2x hidden-below-desktop"></i><span class="hidden-above-desktop">Workouts</span>
+                  <a class="workouts">
+                     <i class="fas fa-running fa-2x hidden-below-desktop"></i><span class="hidden-above-desktop workouts">Workouts</span>
                   </a>
-                  <div class="subtext hidden-below-desktop"><a href="workouts.html">Workouts</a></div>
+                  <div class="subtext hidden-below-desktop"><a class="workouts">Workouts</a></div>
                </li>
                <li class="menu-item subtext tablet-mr-0 desktop-mr-2 meals">
-                  <a href="meals.html">
-                     <i class="fas fa-hamburger fa-2x hidden-below-desktop"></i><span class="hidden-above-desktop">Meals</span>
+                  <a class="meals">
+                     <i class="fas fa-hamburger fa-2x hidden-below-desktop"></i><span class="hidden-above-desktop meals">Meals</span>
                   </a>
-                  <div class="subtext hidden-below-desktop"><a href="meals.html">Meals</a></div>
+                  <div class="subtext hidden-below-desktop"><a class="meals">Meals</a></div>
                </li>
-               <li class="menu-item subtext tablet-mr-0 desktop-mr-2  dashboard">
-                  <a href="dashboard.html">
-                     <i class="fas fa-th-large fa-2x hidden-below-desktop"></i><span class="hidden-above-desktop">Dashboard</span>
+               <li class="menu-item subtext tablet-mr-0 desktop-mr-2 dashboard">
+                  <a class="dashboard">
+                     <i class="fas fa-th-large fa-2x hidden-below-desktop"></i><span class="hidden-above-desktop dashboard">Dashboard</span>
                   </a>
-                  <div class="subtext hidden-below-desktop"><a href="dashboard.html">Dashboard</a></div>
+                  <div class="subtext hidden-below-desktop"><a class="dashboard">Dashboard</a></div>
                </li>
                <li class="menu-item subtext account">
-                  <a href="account.html">
-                     <i class="fas fa-user fa-2x hidden-below-desktop"></i><span class="hidden-above-desktop">Log Out</span>
+                  <a>
+                     <i class="fas fa-user fa-2x hidden-below-desktop"></i><span class="hidden-above-desktop logout">Log
+                        Out</span>
                   </a>
-                  <div class="subtext hidden-below-desktop"><a href="account.html">Account</a></div>
+                  <div class="subtext hidden-below-desktop"><a>Account</a></div>
                   <ul class="menu hidden-below-desktop">
                      <li class="menu-item logout">Logout</li>
-                     <li class="menu-item logout">Delete Account</li>
+                     <li class="menu-item deleteAccount">Delete Account</li>
                   </ul>
                </li>
                <li class="menu-item hidden-above-desktop deleteAccount">
