--- a/workouts.html
+++ b/workouts.html
@@ -19,23 +19,23 @@
          </div>
          <div class="navbar-right">
             <ul class="menu hidden-below-tablet">
-               <li class="menu-item subtext tablet-mr-0 desktop-mr-2 workouts">
-                  <a class="workouts">
-                     <i class="fas fa-running fa-2x hidden-below-desktop"></i><span class="hidden-above-desktop workouts">Workouts</span>
+               <li class="menu-item subtext tablet-mr-0 desktop-mr-2">
+                  <a href="workouts.html">
+                     <i class="fas fa-running fa-2x hidden-below-desktop"></i><span class="hidden-above-desktop">Workouts</span>
                   </a>
-                  <div class="subtext hidden-below-desktop"><a class="workouts">Workouts</a></div>
+                  <div class="subtext hidden-below-desktop"><a href="workouts.html">Workouts</a></div>
                </li>
-               <li class="menu-item subtext tablet-mr-0 desktop-mr-2 meals">
-                  <a class="meals">
-                     <i class="fas fa-hamburger fa-2x hidden-below-desktop"></i><span class="hidden-above-desktop meals">Meals</span>
+               <li class="menu-item subtext tablet-mr-0 desktop-mr-2">
+                  <a href="meals.html">
+                     <i class="fas fa-hamburger fa-2x hidden-below-desktop"></i><span class="hidden-above-desktop">Meals</span>
                   </a>
-                  <div class="subtext hidden-below-desktop"><a class="meals">Meals</a></div>
+                  <div class="subtext hidden-below-desktop"><a href="meals.html">Meals</a></div>
                </li>
-               <li class="menu-item subtext tablet-mr-0 desktop-mr-2 dashboard">
-                  <a class="dashboard">
+               <li class="menu-item subtext tablet-mr-0 desktop-mr-2">
+                  <a href="dashboard.html">
                      <i class="fas fa-th-large fa-2x hidden-below-desktop"></i><span class="hidden-above-desktop dashboard">Dashboard</span>
                   </a>
-                  <div class="subtext hidden-below-desktop"><a class="dashboard">Dashboard</a></div>
+                  <div class="subtext hidden-below-desktop"><a href="dashboard.html">Dashboard</a></div>
                </li>
                <li class="menu-item subtext account">
                   <a>
@@ -56,13 +56,13 @@
                <li class="menu-item">
                   <i class="fa fa-bars fa-2x" id="mobileMenu"></i>
                   <ul class="mobile-menu unclicked" id="mobileSubmenu">
-                     <a href="workouts.html" class="menu-item workouts">
+                     <a href="workouts.html" class="menu-item">
                         Workouts
                      </a>
-                     <a href="meals.html" class="menu-item meals">
+                     <a href="meals.html" class="menu-item">
                         Meals
                      </a>
-                     <a href="dashboard.html" class="menu-item dashboard">
+                     <a href="dashboard.html" class="menu-item">
                         Dashboard
                      </a>
                      <a class="menu-item logout">
