--- a/meals.html
+++ b/meals.html
@@ -96,7 +96,7 @@
                   </div>
                   <div class="col-6 col">
                      <div class="input-element medium">
-                        <label for="">Calories Burned</label>
+                        <label for="">Calories</label>
                         <input class="full-width" type="number" placeholder="Add calories" id="item-calories">
                      </div>
                   </div>
