--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
    <link rel="stylesheet" href="style.css">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous">
+   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body class="bg-primary" style="height: 100%;">
@@ -51,7 +52,9 @@
       </div>
    </section>
    <script src="data.js"></script>
-   <script>mainDataControl.loadEventListeners()</script>
+   <script>
+      mainDataControl.loadEventListeners()
+   </script>
 </body>
 
 </html>
