--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
       crossorigin="anonymous">
    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
    <style>
-      html, body {
-         overflow-y: scroll;
+      body {
+         overflow-y: auto;
       }
    </style>
 </head>
